--- a/Index.html
+++ b/Index.html
@@ -253,6 +253,37 @@
             .owner-name { font-size: 1.4rem; }
             .hero-title { font-size: 2.5rem; }
         }
+         .hero {
+            height: 100vh;
+            position: relative;
+            overflow: hidden;
+            transform: translateZ(0);
+            backface-visibility: hidden;
+        }
+
+        .hero::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(rgba(26, 31, 43, 0.3), rgba(26, 31, 43, 0.3)),
+                        url('https://images.unsplash.com/photo-1618220179428-22790b461013') center/cover;
+            transform: translateZ(0);
+            will-change: transform;
+        }
+
+        /* Optimized Product Cards */
+        .product-card {
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            will-change: transform, box-shadow;
+        }
+
+        .product-card:hover {
+            transform: perspective(1000px) translateY(-10px) translateZ(30px);
+            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.12);
+        }
     </style>
 </head>
 <body>
@@ -480,6 +511,29 @@
         window.addEventListener('scroll', () => {
             const scrolled = window.pageYOffset;
             document.querySelector('.hero').style.backgroundPositionY = `${scrolled * 0.5}px`;
+
+            let ticking = false;
+        function updateParallax() {
+            const scrolled = window.pageYOffset;
+            document.querySelector('.hero').style.backgroundPositionY = `${scrolled * 0.5}px`;
+            ticking = false;
+        }
+
+        window.addEventListener('scroll', () => {
+            if (!ticking) {
+                requestAnimationFrame(updateParallax);
+                ticking = true;
+            }
+        });
+
+        // Debounce function for future scroll events
+        function debounce(func, timeout = 16) {
+            let timer;
+            return (...args) => {
+                clearTimeout(timer);
+                timer = setTimeout(() => { func.apply(this, args); }, timeout);
+            };
+        }
         });
     </script>
 </body>
