Final. Update Index.html

--- a/Index.html
+++ b/Index.html
@@ -480,12 +480,18 @@
             </div>
             <div class="footer-section">
                 <h3>Contact</h3>
-                <p>+91 98765 43210</p>
+                <p>+91 74360 22917</p>
                 <p>contact@jayjalaram.com</p>
                 <div class="social-links">
-                    <a href="#"><i class="fab fa-whatsapp"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="https://wa.me/7436022917" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-whatsapp"></i>
+    </a>
+    <a href="https://www.instagram.com/iamjigar11?igsh=MTk2dmlya2pmaDhucQ==" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://www.facebook.com/share/1Eq8CbDrue/" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-facebook"></i>
+    </a>
                 </div>
             </div>
         </div>
